2010-06-28  Murray Cumming  <murrayc@murrayc.com>

	PrintOperation: get_default_page_setup(): refcount fix.

	* gtk/src/printoperation.hg: get_default_page_setup(),
    get_print_settings(): Use refreturn, fixing bug #622957 (Kjell Ahlstedt).

2.21.1:

2010-06-23  Daniel Elstner  <danielk@openismus.com>

	Split off atkmm into its own separate module

	* atk/, MSVC_Net200[58]/atkmm/: Delete atkmm subdirectories.
	* configure.ac: Remove module definition of atkmm-1.6.  Adjust the
	pkg-config dependencies to pull in an installed atkmm.
	* **/Makefile.am: Remove references to atkmm from the build rules.
	* docs/reference/Doxyfile.in: Remove references to in-tree atkmm.
	* gtk/{gtkmm,gtkmm-uninstalled}.pc.in: Remove atkmm substitutions.
	* tools/extra_defs_gen/generate_defs_gtk.cc: Remove code to output
	definitions for ATK types.

2010-06-16  Murray Cumming  <murrayc@murrayc.com>

	Entry: Added im_context_filter_keypress().

	* gtk/src/entry.hg: Added im_context_filter_keypress(), new in gtk+ 2.22.

2010-06-16  Murray Cumming  <murrayc@murrayc.com>

	Added Assistant::commit() and Entry::reset_im_context().

	* gtk/src/assistant.hg: Added commit(), new in gtk+ 2.22.
	* gtk/src/entry.hg: Added reset_im_context(), new in gtk+ 2.22.

2010-05-18  Murray Cumming  <murrayc@murrayc.com>

	Remove the ifdefs that supported building with optional API.

    As discussed on the mailing list, these will be removed from glibmm soon
    anyway. Anybody who really still needs this should tell us.

This is the gtkmm-2-22 branch for new API.
See also the stable gtkmm-2-20 branch, which should have no more API additions,
and the master branch for the planned API/ABI-breaking gtkmm 3.

2.20.3:

2010-05-04  Murray Cumming  <murrayc@murrayc.com>

	FileChooser::get_filter(): Don't ref the result.

	* gtk/src/filechooser.hg: get_filter(): Don't ref the GtkFilter results,
	because it is a GtkObject, not just a GObject, and we should not