@@ -1,3 +1,15 @@
+2010-07-06  Murray Cumming  <murrayc@murrayc.com>
+
+	Added copyright headers. Patch from Kalev Lember.
+
+	* tools/m4/convert.m4:
+	* tools/m4/convert_atk.m4:
+	* tools/m4/convert_gdk.m4:
+	* tools/m4/convert_gtk.m4:
+	* tools/m4/convert_gtkmm.m4:
+	* tools/m4/convert_pango.m4:
+	* tools/m4/filelist.am: Added LGPL2.1+ headers, like the other files.
+
 2010-06-28  Murray Cumming  <murrayc@murrayc.com>
 
 	PrintOperation: get_default_page_setup(): refcount fix.
